Adjust layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -30,49 +30,69 @@ body{
 }
 
 .container{
-    max-width: 1000px;
+    max-width: 850px;
     margin: auto;
 }
+
 
 
 .game__header{
     margin-top: 5rem;
 }
 
-.game__players{
-    display: flex;
+.game__round{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 'human computer'
+                         'human-card computer-card'
+}
+
+.player--human{
+    grid-area: human;
+}
+.player--computer{
+    grid-area: computer;
+}
+.card--human{
+    grid-area: human-card;
+}
+.card--computer{
+    grid-area: computer-card
+}
+
+.player{
     text-align: center;
-    margin: 1.5rem 0;
+    margin-top: 2rem;
+    font-size: 2.5rem;
+}
+.card{
+    padding-left: 8rem;
+    margin-top: .8rem;
 }
 
-.game__cards{
-    display: flex;
-    justify-content: space-around;
+/* .group{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    gap: 1rem;
 }
 
-.game__players > *{
-    flex: 1;
-}
-
-.game__card{
-    padding: 0 1.2rem;
-    margin: 0;
-}
-
-.game__card > *{
+.player__card > *{
     margin-bottom: 1rem;
-}
+} 
 
-.game__player {
+.player-name{
     font-size: 2rem;
-}
+    margin-bottom: 1rem;
+    text-align: center;
+} */
+
 
 
 /* Spinner */
 .spinner{
     width: 60px;
     height: 60px;
-    /* background: #cccccc; */
     border-radius: 50%;
     border: 5px solid #333;
     border-top-color: #ADFF2F;
